--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/new1?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net/sql12355883?useSSL=false
+spring.datasource.username=sql12355883
+spring.datasource.password=TvJ8hxMs6d
