--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net/sql12355883?useSSL=false
 spring.datasource.username=sql12355883
 spring.datasource.password=TvJ8hxMs6d
+
+spring.profiles.active=dev
